# SpriterPlusPlus

./: CMakeLists.txt  README.md
spriterengine/animation/: animation.cpp  animation.h  animationinstance.cpp
spriterengine/entity/: entityinstance.cpp  entityinstancedata.cpp
spriterengine/file/: file.h
spriterengine/loading/: loader.cpp  loadinghelpers.cpp  spriterdocumentloader.cpp
spriterengine/model/: spritermodel.cpp
spriterengine/objectinfo/: intvariableinfo.cpp  spriteobjectinfo.cpp  spriteobjectinfo.h  universalobjectinterface.cpp  universalobjectinterface.h
spriterengine/override/: imagefile.cpp  imagefile.h
spriterengine/variable/: variablecontainer.cpp  variableinstancenameandidmap.cpp  variableinstancenameandidmap.h
